libs/@local/hashql/ast/tests/ui/lowering/special-form-expander/newtype-2.jsonc
//@ run: fail
//@ description: newtype/2 should error out
["::kernel::special_form::newtype", "x", "Integer"]
//~^ ERROR Add missing arguments
